Implementing Refractive Material

--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="source\Rendering\Scene.cpp" />
     <ClCompile Include="source\Loader\SceneLoader.cpp" />
     <ClCompile Include="source\Object\Triangle.cpp" />
+    <ClCompile Include="source\Shading\RefractiveMaterial.cpp" />
     <ClCompile Include="source\Shading\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +58,7 @@
     <ClInclude Include="include\Rendering\Scene.h" />
     <ClInclude Include="include\Loader\SceneLoader.h" />
     <ClInclude Include="include\Object\Triangle.h" />
+    <ClInclude Include="include\Shading\RefractiveMaterial.h" />
     <ClInclude Include="include\Shading\Texture.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
