SDL file support and general improvements on interface and project organization

--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
@@ -19,15 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Light\PrimitiveLight.cpp" />
+    <ClCompile Include="source\Loader\AssimpUtils.cpp" />
+    <ClCompile Include="source\Loader\SDLLoader.cpp" />
+    <ClCompile Include="source\Light\PointLight.cpp" />
     <ClCompile Include="source\Memory\MemoryPool.cpp" />
     <ClCompile Include="source\Object\GroundPlane.cpp" />
     <ClCompile Include="source\Rendering\BVHTree.cpp" />
     <ClCompile Include="source\Rendering\FlatTree.cpp" />
     <ClCompile Include="source\Rendering\Integrator\Integrator.cpp" />
     <ClCompile Include="source\Rendering\Integrator\SamplerIntegrator.cpp" />
-    <ClCompile Include="source\Rendering\Light.cpp" />
+    <ClCompile Include="source\Light\Light.cpp" />
     <ClCompile Include="source\Rendering\ObjectTree.cpp" />
-    <ClCompile Include="source\Rendering\RenderManager.cpp" />
+    <ClCompile Include="source\Rendering\FrameManager.cpp" />
     <ClCompile Include="source\Shading\GlossyMaterial.cpp" />
     <ClCompile Include="source\Shading\Material.cpp" />
     <ClCompile Include="source\Object\Mesh.cpp" />
@@ -41,21 +45,25 @@
     <ClCompile Include="source\Rendering\Ray.cpp" />
     <ClCompile Include="source\RayTracing_from_scratch.cpp" />
     <ClCompile Include="source\Rendering\Scene.cpp" />
-    <ClCompile Include="source\Loader\SceneLoader.cpp" />
-    <ClCompile Include="source\Object\Triangle.cpp" />
+    <ClCompile Include="source\Loader\AssimpLoader.cpp" />
     <ClCompile Include="source\Shading\RefractiveMaterial.cpp" />
     <ClCompile Include="source\Shading\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Contrib\stb_image.h" />
+    <ClInclude Include="include\Light\PrimitiveLight.h" />
+    <ClInclude Include="include\Loader\AssimpUtils.h" />
+    <ClInclude Include="include\Loader\SDLLoader.h" />
     <ClInclude Include="include\Memory\MemoryPool.h" />
     <ClInclude Include="include\Rendering\BVHTree.h" />
     <ClInclude Include="include\Rendering\FlatTree.h" />
     <ClInclude Include="include\Rendering\Integrator\Integrator.h" />
     <ClInclude Include="include\Rendering\Integrator\SamplerIntegrator.h" />
-    <ClInclude Include="include\Rendering\Light.h" />
-    <ClInclude Include="include\Rendering\ObjectTree.h" />
+    <ClInclude Include="include\Light\Light.h" />
+    <ClInclude Include="include\Rendering\NodeHierarchy.h" />
+    <ClInclude Include="include\Light\PointLight.h" />
     <ClInclude Include="include\Rendering\RenderingUtils.h" />
-    <ClInclude Include="include\Rendering\RenderManager.h" />
+    <ClInclude Include="include\Rendering\FrameManager.h" />
     <ClInclude Include="include\Rendering\Utils\Spectrum.h" />
     <ClInclude Include="include\Shading\GlossyMaterial.h" />
     <ClInclude Include="include\Shading\Material.h" />
@@ -66,12 +74,11 @@
     <ClInclude Include="include\Object\GroundPlane.h" />
     <ClInclude Include="include\Object\Object.h" />
     <ClInclude Include="include\pch.h" />
-    <ClInclude Include="include\Rendering\PinholeCamera.h" />
+    <ClInclude Include="include\Camera\PinholeCamera.h" />
     <ClInclude Include="include\Rendering\Ray.h" />
     <ClInclude Include="include\RayTracing_from_scratch.h" />
     <ClInclude Include="include\Rendering\Scene.h" />
-    <ClInclude Include="include\Loader\SceneLoader.h" />
-    <ClInclude Include="include\Object\Triangle.h" />
+    <ClInclude Include="include\Loader\AssimpLoader.h" />
     <ClInclude Include="include\Shading\RefractiveMaterial.h" />
     <ClInclude Include="include\Shading\Texture.h" />
     <ClInclude Include="resource.h" />
@@ -84,7 +91,7 @@
     <ProjectGuid>{A4600D3B-4693-4FDC-8D74-5F708E714426}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>RayTracingfromscratch</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -208,10 +215,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>false</IntrinsicFunctions>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>false</ConformanceMode>
+      <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(ProjectDir)\include;$(SolutionDir)\dependencies\assimp\include\;$(SolutionDir)\dependencies\OpenImageDenoiser\include;$(SolutionDir)\dependencies;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
@@ -219,6 +226,8 @@
       <EnablePREfast>true</EnablePREfast>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <CompileAsManaged>false</CompileAsManaged>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
