--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="source\Object\Mesh.cpp">
       <Filter>source\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="source\Object\Triangle.cpp">
-      <Filter>source\Objects</Filter>
-    </ClCompile>
     <ClCompile Include="source\Rendering\PinholeCamera.cpp">
       <Filter>source\Rendering</Filter>
     </ClCompile>
@@ -102,13 +99,13 @@
     <ClCompile Include="source\Rendering\Scene.cpp">
       <Filter>source\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="source\Rendering\Light.cpp">
+    <ClCompile Include="source\Light\Light.cpp">
       <Filter>source\Rendering\Lights</Filter>
     </ClCompile>
-    <ClCompile Include="source\Loader\SceneLoader.cpp">
+    <ClCompile Include="source\Loader\AssimpLoader.cpp">
       <Filter>source\Loader</Filter>
     </ClCompile>
-    <ClCompile Include="source\Rendering\RenderManager.cpp">
+    <ClCompile Include="source\Rendering\FrameManager.cpp">
       <Filter>source\Rendering</Filter>
     </ClCompile>
     <ClCompile Include="source\Shading\Texture.cpp">
@@ -144,6 +141,18 @@
     <ClCompile Include="source\Memory\MemoryPool.cpp">
       <Filter>source\Memory</Filter>
     </ClCompile>
+    <ClCompile Include="source\Light\PointLight.cpp">
+      <Filter>source\Rendering\Lights</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Loader\SDLLoader.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Loader\AssimpUtils.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Light\PrimitiveLight.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\RayTracing_from_scratch.h">
@@ -161,13 +170,10 @@
     <ClInclude Include="include\Object\GroundPlane.h">
       <Filter>headers\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="include\Object\Triangle.h">
-      <Filter>headers\Objects</Filter>
-    </ClInclude>
     <ClInclude Include="include\Object\Object.h">
       <Filter>headers\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="include\Rendering\Light.h">
+    <ClInclude Include="include\Light\Light.h">
       <Filter>headers\Rendering\Lights</Filter>
     </ClInclude>
     <ClInclude Include="include\Rendering\Scene.h">
@@ -176,16 +182,16 @@
     <ClInclude Include="include\Rendering\Ray.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="include\Rendering\PinholeCamera.h">
+    <ClInclude Include="include\Camera\PinholeCamera.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="include\Loader\SceneLoader.h">
+    <ClInclude Include="include\Loader\AssimpLoader.h">
       <Filter>headers\Loader</Filter>
     </ClInclude>
     <ClInclude Include="include\RenderHeaders.h">
       <Filter>headers</Filter>
     </ClInclude>
-    <ClInclude Include="include\Rendering\RenderManager.h">
+    <ClInclude Include="include\Rendering\FrameManager.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
     <ClInclude Include="include\Shading\Texture.h">
@@ -215,7 +221,7 @@
     <ClInclude Include="include\Rendering\Integrator\SamplerIntegrator.h">
       <Filter>headers\Rendering\Integrators</Filter>
     </ClInclude>
-    <ClInclude Include="include\Rendering\ObjectTree.h">
+    <ClInclude Include="include\Rendering\NodeHierarchy.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
     <ClInclude Include="include\Rendering\FlatTree.h">
@@ -229,6 +235,21 @@
     </ClInclude>
     <ClInclude Include="include\Rendering\RenderingUtils.h">
       <Filter>headers\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Light\PointLight.h">
+      <Filter>headers\Rendering\Lights</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Loader\SDLLoader.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Loader\AssimpUtils.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Contrib\stb_image.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Light\PrimitiveLight.h">
+      <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
