--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="source\RayTracing_from_scratch.cpp" />
     <ClCompile Include="source\Rendering\Scene.cpp" />
     <ClCompile Include="source\Loader\AssimpLoader.cpp" />
+    <ClCompile Include="source\Shading\PhongMaterial.cpp" />
     <ClCompile Include="source\Shading\RefractiveMaterial.cpp" />
     <ClCompile Include="source\Shading\Texture.cpp" />
   </ItemGroup>
@@ -82,6 +83,7 @@
     <ClInclude Include="include\Shading\RefractiveMaterial.h" />
     <ClInclude Include="include\Shading\Texture.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="include\Shading\PhongMaterial.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="RayTracing_from_scratch.rc" />
