--- a/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
+++ b/RayTracing_from_scratch/RayTracing_from_scratch.vcxproj.filters
@@ -108,7 +108,7 @@
     <ClCompile Include="source\Rendering\FrameManager.cpp">
       <Filter>source\Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="source\Shading\Texture.cpp">
+    <ClCompile Include="source\Shading\RGBTexture.cpp">
       <Filter>source\Shading</Filter>
     </ClCompile>
     <ClCompile Include="source\Shading\DiffuseMaterial.cpp">
@@ -194,7 +194,7 @@
     <ClInclude Include="include\Rendering\FrameManager.h">
       <Filter>headers\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="include\Shading\Texture.h">
+    <ClInclude Include="include\Shading\RGBTexture.h">
       <Filter>headers\Shading</Filter>
     </ClInclude>
     <ClInclude Include="include\Rendering\Utils\Spectrum.h">
